--- a/translations/kangyur/translations/061-019_toh199-the_sutra_on_the_bodhisattva_maitreya_taking_birth_in_tusita.xml
+++ b/translations/kangyur/translations/061-019_toh199-the_sutra_on_the_bodhisattva_maitreya_taking_birth_in_tusita.xml
@@ -4,18 +4,13 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Sūtra on Maitreya’s Birth in the Heaven of
-          Joy</title>
+        <title type="mainTitle" xml:lang="en">The Sūtra on Maitreya’s Birth in the Heaven of Joy</title>
         <title type="mainTitle" xml:lang="bo">བྱམས་པ་དགའ་ལྡན་གནམ་དུ་སྐྱེ་བ་བླངས་པའི་མདོ།</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">byams pa dga’ ldan gnam du skye ba blangs pa’i
-          mdo</title>
-        <title type="longTitle" xml:lang="en">The Noble Sūtra “The Bodhisattva Maitreya’s Birth in
-          the Heaven of Joy”</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa byang chub sems dpa’ byams pa dga’ ldan
-          gnam du skye ba blangs pa’i mdo</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">byams pa dga’ ldan gnam du skye ba blangs pa’i mdo</title>
+        <title type="longTitle" xml:lang="en">The Noble Sūtra “The Bodhisattva Maitreya’s Birth in the Heaven of Joy”</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa byang chub sems dpa’ byams pa dga’ ldan gnam du skye ba blangs pa’i mdo</title>
         <title type="longTitle" xml:lang="bo">འཕགས་པ་བྱང་ཆུབ་སེམས་དཔའ་བྱམས་པ་དགའ་ལྡན་གནམ་དུ་སྐྱེ་བ་བླངས་པའི་མདོ།</title>
-        <title type="otherTitle" xml:lang="zh">佛說觀彌勒菩薩上生兜率天經</title>
-        <title type="otherTitle" xml:lang="zh">彌勒上生經</title>
+        <title type="otherTitle" xml:lang="zh">《彌勒菩薩兜率天受生經》 （大藏經：《佛說觀彌勒菩薩上生兜率天經》）</title>
         <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation
           Committee<lb/>under the patronage and supervision of 84000: Translating the Words of the
           Buddha</author>
@@ -32,7 +27,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -68,7 +63,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-04-08T17:56:30.167Z" user="admin">08/04/2022 17:56:30</note>
+        <note type="lastUpdated" date-time="2022-07-26T06:36:58.38Z" user="admin">26/07/2022 06:36:58</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-05-24T15:34:14.153Z" user="john">2.e</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:11:25.467Z" user="mike">2.f</note>
@@ -87,30 +82,22 @@
         <note type="updated" update="text-version" value="0.0.9" date-time="2021-09-06T06:29:15.511Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.10" date-time="2021-11-04T13:39:38.152Z" user="line-tofte">Auto (update-contributors)</note>
-
         <note type="updated" update="translation-status" value="2.a" date-time="2021-11-04T13:40:19.154Z" user="line-tofte">2.a</note>
-
         <note type="updated" update="text-version" value="0.0.11" date-time="2021-11-04T13:40:19.154Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="translation-status" value="2" date-time="2021-12-08T08:43:31.933Z" user="line-tofte">2</note>
-
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-08T08:43:31.933Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-15T11:12:12.437Z" user="line-tofte">Auto (update-contributors)</note>
-
         <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-17T18:33:51.261Z" user="celso">Applied Nathan's annotations and ready
           for publishing</note>
-
         <note type="updated" update="translation-status" value="1" date-time="2021-12-17T20:15:03.483Z" user="celso">1</note>
-
         <note type="updated" update="text-version" value="1.0.0" date-time="2021-12-17T20:15:03.483Z" user="celso">First Published Version</note>
-
         <note type="updated" update="text-version" value="1.0.1" date-time="2022-02-07T14:08:26.706Z" user="laura">Typo corrected</note>
-
         <note type="updated" update="text-version" value="1.0.2" date-time="2022-02-08T20:17:30.43Z" user="celso">Typo corrected in glossary</note>
-          <note type="updated" update="text-version" value="1.0.3" date-time="2022-04-08T17:56:26.375Z" user="martina-cotter">updated links to Toh 94</note>
+        <note type="updated" update="text-version" value="1.0.3" date-time="2022-04-08T17:56:26.375Z" user="martina-cotter">updated links to Toh 94</note>
+        <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T06:36:50.648Z" user="cabie-sim">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1739,19 +1726,14 @@
             </gloss>
           </item>
           <item>
-            <gloss type="place" xml:id="UT22084-061-019-331">
-              <term>Vārāṇasī</term>
-              <term xml:lang="Bo-Ltn">ba ra ni </term>
-              <term xml:lang="bo">བ་ར་ནི།</term>
-              <term xml:lang="zh">波羅捺</term>
-              <term xml:lang="Sa-Ltn">Vārāṇasī</term>
-              <term type="definition">The ancient capital of the Licchavi republican state. The
-                Buddha visited this city several times during his lifetime. It is perhaps most
-                famous as the location where, on different occasions, the Buddha cured a plague,
-                admitted the first nuns into the Buddhist order, was offered a bowl of honey by
-                monkeys, and announced his <foreign xml:lang="Sa-Ltn" type="term">parinirvāṇa</foreign> three months in advance. </term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-061-019-331" type="place" mode="match">
+                            <term>Vārāṇasī</term>
+                            <term xml:lang="Bo-Ltn">ba ra ni</term>
+                            <term xml:lang="bo">བ་ར་ནི།</term>
+                            <term xml:lang="zh">波羅捺</term>
+                            <term xml:lang="Sa-Ltn">Vārāṇasī</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss type="place" xml:id="UT22084-061-019-332">
               <term>Anāthapiṇḍada’s park</term>
