--- a/translations/kangyur/translations/062-001_toh201-the_seal_of_engagement_in_kindling_the_power_of_faith.xml
+++ b/translations/kangyur/translations/062-001_toh201-the_seal_of_engagement_in_kindling_the_power_of_faith.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Seal of Engagement in Awakening the Power of Faith</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Śraddhā­balādhānāvatāra­mudrā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dad pa’i stobs bskyed pa la ’jug pa’i phyag rgya</title>
                 <title type="mainTitle" xml:lang="bo">དད་པའི་སྟོབས་བསྐྱེད་པ་ལ་འཇུག་པའི་ཕྱག་རྒྱ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Śraddhā­balādhānāvatāra­mudrā</title>
-                <title type="mainTitle" xml:lang="en">The Seal of Engagement in Awakening the Power of Faith</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dad pa’i stobs bskyed pa la ’jug pa’i phyag rgya zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­śraddhā­balādhānāvatāra­mudrā­nāma­mahā­yāna­sūtra</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Seal of Engagement in Awakening the Power of Faith”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­śraddhā­balādhānāvatāra­mudrā­nāma­mahā­yāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dad pa’i stobs bskyed pa la ’jug pa’i phyag rgya zhes bya ba theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དད་པའི་སྟོབས་བསྐྱེད་པ་ལ་འཇུག་པའི་ཕྱག་རྒྱ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="otherTitle" xml:lang="zh">信力入印法門經</title>
+                <title type="otherTitle" xml:lang="zh">《信力入印法門經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by Dharmachakra Translation Committee<lb/> under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="externalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
@@ -28,7 +28,7 @@
                 <sponsor ref="sponsors.xml#sponsor-4">Shakya Dewa</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.4 <date>2022</date>
+                <edition>v 1.1.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,8 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-17T16:58:15.75Z" user="admin">17/03/2022 16:58:15</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T06:38:50.189Z" user="admin">26/07/2022 06:38:50</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:19.779Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2021-03-01T11:18:42.312Z" user="line-tofte">2.c</note>
@@ -76,23 +75,24 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-06-15T23:33:53.514Z" user="mike">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-06-15T23:34:14.911Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-06-15T23:34:14.911Z" user="mike">Auto (update-publication-status)</note>
-            
-    <note type="updated" update="text-version" value="0.0.11" date-time="2021-06-24T09:35:55.702Z" user="andre">Auto (update-titles)</note>
-    <note type="updated" update="translation-status" value="2" date-time="2021-07-12T11:34:37.818Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.0.12" date-time="2021-07-12T11:34:37.818Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.13" date-time="2021-08-06T11:57:29.552Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1.a" date-time="2021-09-02T17:50:35.288Z" user="celso">1.a</note>
-    <note type="updated" update="text-version" value="0.0.14" date-time="2021-09-02T17:50:35.288Z" user="celso">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-09-02T17:53:50.03Z" user="celso">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-02T17:53:50.03Z" user="celso">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-02T18:02:09.997Z" user="celso">minor typo in bibl</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-02T18:43:14.231Z" user="celso">forget to set current publication date</note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-09-03T12:50:22.678Z" user="celso">fixed short title</note>
-    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-06T18:03:44.479Z" user="john">Changes to introduction.</note>
-    <note type="updated" update="text-version" value="1.1.0" date-time="2021-09-07T17:53:49.92Z" user="john">Line breaks added, crown protuberance replaced by uṣṇīṣa, various typos etc. corrected.</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-09-08T09:19:49.174Z" user="john">Added glossary entry on invisible crown.</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-09-16T16:17:27.75Z" user="celso">Skt. glossary corrections from Wiesied applied</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2021-09-22T15:25:13.299Z" user="andre">"Praśrabdhi" gloss. entry added and "Pliancy" changed to "Ease" </note>    <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-17T16:58:11.729Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2021-06-24T09:35:55.702Z" user="andre">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2021-07-12T11:34:37.818Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2021-07-12T11:34:37.818Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2021-08-06T11:57:29.552Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2021-09-02T17:50:35.288Z" user="celso">1.a</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2021-09-02T17:50:35.288Z" user="celso">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-09-02T17:53:50.03Z" user="celso">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-02T17:53:50.03Z" user="celso">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-02T18:02:09.997Z" user="celso">minor typo in bibl</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-02T18:43:14.231Z" user="celso">forget to set current publication date</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2021-09-03T12:50:22.678Z" user="celso">fixed short title</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-06T18:03:44.479Z" user="john">Changes to introduction.</note>
+                <note type="updated" update="text-version" value="1.1.0" date-time="2021-09-07T17:53:49.92Z" user="john">Line breaks added, crown protuberance replaced by uṣṇīṣa, various typos etc. corrected.</note>
+                <note type="updated" update="text-version" value="1.1.1" date-time="2021-09-08T09:19:49.174Z" user="john">Added glossary entry on invisible crown.</note>
+                <note type="updated" update="text-version" value="1.1.2" date-time="2021-09-16T16:17:27.75Z" user="celso">Skt. glossary corrections from Wiesied applied</note>
+                <note type="updated" update="text-version" value="1.1.3" date-time="2021-09-22T15:25:13.299Z" user="andre">"Praśrabdhi" gloss. entry added and "Pliancy" changed to "Ease" </note>
+                <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-17T16:58:11.729Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="1.1.5" date-time="2022-07-26T06:38:42.391Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
