--- a/translations/kangyur/translations/062-003_toh203-the_seal_of_dharma.xml
+++ b/translations/kangyur/translations/062-003_toh203-the_seal_of_dharma.xml
@@ -17,9 +17,11 @@
 
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­dharma­mudrānāma­mahāyāna­sūtra</title>
 
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཆོས་ཀྱི་ཕྱག་རྒྱ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa chos kyi phyag rgya zhes bya ba theg pa chen po’i mdo</title>
 
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཆོས་ཀྱི་ཕྱག་རྒྱ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="otherTitle" xml:lang="zh">《聖法印契經》</title>
 
                                 <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation Committee<lb/>under the
                                         patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -44,7 +46,7 @@
                         </titleStmt>
 
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -84,24 +86,40 @@
 
 
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-02-01T14:20:05.619Z" user="admin">01/02/2022 14:20:05</note>
+
+                                
+
+                                
+
                                 <note type="updated" update="text-version" value="" date-time="2019-09-25T06:29:47.14Z" user="andreas">0.1 2019</note>
+
                                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
+
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:04.289Z" user="mike">2.h</note>
+
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-03-16T15:44:52.715Z" user="line-tofte">2.f</note>
+
                                 <note type="updated" update="translation-status" value="2.e" date-time="2021-04-27T15:19:27.535Z" user="line-tofte">2.e</note>
+
                                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-27T15:19:27.535Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.1.3" date-time="2021-04-27T15:20:01.238Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-04-29T09:18:54.329Z" user="line-tofte">2.d</note>
+
                                 <note type="updated" update="text-version" value="0.1.4" date-time="2021-04-29T09:18:54.329Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.1.5" date-time="2021-04-29T09:19:52.866Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
                                 <note type="updated" update="translation-status" value="2.c" date-time="2021-04-29T09:58:00.449Z" user="line-tofte">2.c</note>
+
                                 <note type="updated" update="text-version" value="0.1.6" date-time="2021-04-29T09:58:00.449Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.1.7" date-time="2021-11-29T11:44:41.502Z" user="line-tofte">Auto
                                         (update-contributors)</note>
 
@@ -131,11 +149,14 @@
 
                                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-27T15:27:58.945Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                        
-    <note type="updated" update="translation-status" value="1" date-time="2022-02-01T14:19:57.812Z" user="laura">1</note>
 
-    <note type="updated" update="text-version" value="1.0.0" date-time="2022-02-01T14:19:57.812Z" user="laura">First published version</note>
-</notesStmt>
+                                <note type="updated" update="translation-status" value="1" date-time="2022-02-01T14:19:57.812Z" user="laura">1</note>
+
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2022-02-01T14:19:57.812Z" user="laura">First published version</note>
+
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                        <note type="lastUpdated" date-time="2022-07-26T06:39:59.972Z" user="admin">26/07/2022 06:39:59</note>    <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T06:39:52.253Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
@@ -233,7 +254,7 @@
                                                 Anāthapiṇḍada’s park, together with a great monastic assembly of five thousand monks and many
                                                 bodhisattva great beings. By the power of the Blessed One, Venerable Śāriputra rose from his seat,
                                                 draped his shawl over one shoulder, and knelt on his right knee. Joining his palms, he bowed to the
-                                                Blessed One and said, “Blessed One, when we speak of ‘going forth,’ Blessed One, to what extent is a
+                                                Blessed One and asked, “Blessed One, when we speak of ‘going forth,’ Blessed One, to what extent is a
                                                 monk who has gone forth in the well-proclaimed Dharma and Vinaya <ref cRef="F.78.b" type="folio" xml:id="UT22084-062-003-76"/> fully ordained after taking the noble and supramundane
                                                 ordination?”</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-003-16"/>
@@ -253,7 +274,7 @@
                                                 that are offered faithfully. They are also worthy of receiving clothing, food, bedding, seats,
                                                 medicines, and healing substances.”</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-003-18"/>
-                                        <p tid="25">At that point Venerable Subhūti said to Venerable Śāriputra, “Venerable Śāriputra, what did the
+                                        <p tid="25">At that point Venerable Subhūti inquired of Venerable Śāriputra, “Venerable Śāriputra, what did the
                                                 Blessed One have in mind when he said, ‘Śāriputra, a monk who has gone forth in the well-proclaimed
                                                 Dharma and Vinaya is fully ordained after taking the noble and supramundane ordination to the extent
                                                 that he does not transcend the qualities of ordinary beings and does not attain the uncontaminated
@@ -268,7 +289,7 @@
                                                 apprehended without, and it is also not apprehended anywhere else. The nature of the realm of sentient
                                                 beings and the nature of all qualities of ordinary beings are not easily transcended.</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-003-20"/>
-                                        <p tid="27">“Venerable Subhūti, the Blessed One has said, ‘a monk who has gone forth in the well-proclaimed
+                                        <p tid="27">“Venerable Subhūti, the Blessed One has said, ‘A monk who has gone forth in the well-proclaimed
                                                 Dharma and Vinaya is fully ordained after taking the noble and supramundane ordination to the extent
                                                 that he does not transcend the qualities of ordinary beings and does not attain the uncontaminated
                                                 qualities. Those who go forth in this way are genuinely going forth, whereas those who do not go forth
@@ -288,9 +309,9 @@
                                                 does not attain the uncontaminated qualities. Those who go forth in this way are genuinely going
                                                 forth, whereas those who do not go forth in this way are incorrectly going forth. Śāriputra, such
                                                 monks are worthy of receiving donations that are offered faithfully. They are also worthy of receiving
-                                                clothing, food, bedding, seats, medicines, and healing substances.’ ”</p>
+                                                clothing, food, bedding, seats, medicines, and healing substances.’ ”</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-003-23"/>
-                                        <p tid="30">Venerable Subhūti said, “Venerable Śāriputra, what did the Blessed One have in mind when he said,
+                                        <p tid="30">Venerable Subhūti asked, “Venerable Śāriputra, what did the Blessed One have in mind when he said,
                                                 ‘Monks who do not abandon exertion will also not abandon form. They will also not abandon feelings,
                                                 perceptions, formations, or consciousness. That is why a monk who has gone forth in the
                                                 well-proclaimed Dharma and Vinaya is fully ordained after taking the noble and supramundane
@@ -327,13 +348,13 @@
                                         <p tid="34">“Monks who have no qualms do not raise qualms. Monks who lack verbal expression and have
                                                 transcended verbal expression are unable to make presentations based on deliberations. <ref cRef="F.80.b" type="folio" xml:id="UT22084-062-003-80"/> For such monks there is no coming,
                                                 going, standing, sitting, and lying down. Monks who are not skilled logicians delight in examination.
-                                                Monks who are skilled logicians delight in non-examination. Venerable Subhūti, that is what the
+                                                Monks who are skilled logicians delight in nonexamination. Venerable Subhūti, that is what the
                                                 Blessed One had in mind when he said, ‘That is why a monk who has gone forth in the well-proclaimed
                                                 Dharma and Vinaya is fully ordained after taking the noble and supramundane ordination. Those who go
                                                 forth in this way are genuinely going forth, whereas those who do not go forth in this way are
                                                 incorrectly going forth. Śāriputra, such monks are worthy of receiving donations that are offered
                                                 faithfully. They are also worthy of receiving clothing, food, bedding, seats, medicines, and healing
-                                                substances.’ ” </p>
+                                                substances.’ ” </p>
                                         <milestone unit="chunk" xml:id="UT22084-062-003-30"/>
                                         <p tid="35">At that time, the Blessed One expressed his approval to Venerable Śāriputra: “Excellent,
                                                 Śāriputra, excellent! The way that you have presented this is exactly what I intended and taught. This
