--- a/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
+++ b/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
@@ -4,20 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sor mo'i phreng ba la phan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṅgulimālīyasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra for the Benefit of Aṅgulimāla</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sor mo'i phreng ba la phan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">aṅgulimālīyasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sor mo'i phreng ba la phan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṅgulimālīyanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="zh">《央掘魔羅經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sor mo'i phreng ba la phan pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">央掘魔羅經</title>
                 <author ref="contributors.xml#team-7" role="translatorMain"/>
-            <sponsor ref="sponsors.xml#sponsor-32">Frank Lyn and Ivy Lai</sponsor>
                 <author role="translatorEng" ref="contributors.xml#person-31">Casey Kemp</author>
-    <consultant role="projectManager" ref="contributors.xml#person-31">Casey Kemp</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-31">Casey Kemp</consultant>
+                <sponsor ref="sponsors.xml#sponsor-32">Frank Lyn and Ivy Lai</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -37,9 +36,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-24T14:11:13.697Z" user="admin">24/04/2020 14:11:13</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:52:15.891Z" user="admin">26/07/2022 06:52:15</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T06:52:08.202Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
