--- a/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
@@ -8,9 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">ajātaśatrukaukṛtyavinodanasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ma skyes dgra'i 'gyod pa bsal ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryājātaśatru­kaukṛttyavinodana­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">阿闍世懺悔經</title>
+                <title type="otherTitle" xml:lang="zh">《阿闍世懺悔經》 (大正藏：文殊支利普照三昧經)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ma skyes dgra'i 'gyod pa bsal ba zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">(大正藏：文殊支利普照三昧經)</title>
                 <author role="translatorMain" ref="eft:team-9"/>
                 <author role="translatorEng" ref="eft:person-75">Timothy Hinkle</author>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
@@ -21,7 +20,7 @@
                 <sponsor ref="sponsors.xml#sponsor-186">苏享国阖家, 马春树, 苏慧, 姚雨含, 马鑫, 刘弈汐, 林媛媛, 黄璎珞</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,25 +40,23 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-17T10:45:34.91Z" user="admin">17/06/2022 10:45:34</note>
-            <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:23.782Z" user="mike">2.h</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2022-01-06T14:14:32.449Z" user="line-tofte">2.g</note>
-
-    <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-06T14:14:32.449Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T14:16:16.353Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T14:16:35.741Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2022-03-03T14:51:39.119Z" user="line-tofte">2.f</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-03T14:51:39.119Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-07T14:15:27.148Z" user="line-tofte">2.e</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-07T14:15:27.148Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2022-06-07T14:20:14.061Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.d" date-time="2022-06-17T10:45:29.08Z" user="line-tofte">2.d</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-17T10:45:29.08Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-07-26T06:53:33.187Z" user="admin">26/07/2022 06:53:33</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:23.782Z" user="mike">2.h</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-01-06T14:14:32.449Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-06T14:14:32.449Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T14:16:16.353Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T14:16:35.741Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-03-03T14:51:39.119Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-03T14:51:39.119Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-06-07T14:15:27.148Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-07T14:15:27.148Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-06-07T14:20:14.061Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-06-17T10:45:29.08Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-17T10:45:29.08Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T06:53:31.169Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
