--- a/translations/kangyur/placeholders/063-003_toh222-the_sutra_of_the_chapter_on_tib_the_great_drum_skt_the_bearer_of_the_great_drum.xml
+++ b/translations/kangyur/placeholders/063-003_toh222-the_sutra_of_the_chapter_on_tib_the_great_drum_skt_the_bearer_of_the_great_drum.xml
@@ -4,11 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rnga bo che chen po'i le'u'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahābherīhārakaparivartasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Chapter on [Tib:] the Great Drum [Skt:] the Bearer of the Great Drum</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnga bo che chen po'i le'u zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahābherīhārakaparivartasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rnga bo che chen po'i le'u'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahābherīhāraka­parivarta­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnga bo che chen po'i le'u zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《大鼓品經》(大正藏：大法鼓經)</title>
                 <author role="translatorMain" ref="contributors.xml#team-20"/>
                 <consultant role="projectManager" ref="contributors.xml#person-127">Scott Wellenbach</consultant>
@@ -25,7 +25,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -45,11 +45,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-06T09:15:24.823Z" user="amy">06/04/2021 09:15:24</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-07T16:01:37.7Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-06T09:15:21.864Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:55:34.029Z" user="admin">26/07/2022 06:55:34</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-07T16:01:37.7Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-06T09:15:21.864Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T06:55:26.344Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
