--- a/translations/kangyur/placeholders/063-004_toh223-the_sutra_of_the_chapter_on_the_thirtythree.xml
+++ b/translations/kangyur/placeholders/063-004_toh223-the_sutra_of_the_chapter_on_the_thirtythree.xml
@@ -9,7 +9,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sum cu rtsa gsum pa'i le'u'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatrāyastriṃśat­parivarta­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sum cu rtsa gsum pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">三十三天品經</title>
+                <title type="otherTitle" xml:lang="zh">《三十三天品經》</title>
                 <author role="translatorMain" ref="eft:team-9"/>
                 <author role="translatorEng" ref="eft:person-71">Nika Jovic</author>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
@@ -18,7 +18,7 @@
                 <sponsor ref="sponsors.xml#sponsor-192">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, Dou Xuemin, Nada</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -37,17 +37,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-13T10:08:05.697Z" user="admin">13/12/2021 10:08:05</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:42:14.171Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-12-13T10:06:44.885Z" user="line-tofte">2.h</note>
-
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-13T10:06:44.885Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-13T10:07:46.613Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-13T10:07:59.722Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-07-26T06:56:35.83Z" user="admin">26/07/2022 06:56:35</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:42:14.171Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-12-13T10:06:44.885Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-13T10:06:44.885Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-13T10:07:46.613Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-13T10:07:59.722Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-26T06:56:28.122Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
