--- a/translations/kangyur/translations/063-007_toh226-the_sutra_on_transmigration_through_existences.xml
+++ b/translations/kangyur/translations/063-007_toh226-the_sutra_on_transmigration_through_existences.xml
@@ -4,15 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">srid pa ’pho ba’i mdo</title>
-                                <title type="mainTitle" xml:lang="bo">སྲིད་པ་འཕོ་བའི་མདོ།</title>
                                 <title type="mainTitle" xml:lang="en">The Sūtra on Transmigration Through Existences</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྲིད་པ་འཕོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa srid pa ’pho ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="mainTitle" xml:lang="bo">སྲིད་པ་འཕོ་བའི་མདོ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">srid pa ’pho ba’i mdo</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “Transmigration Through Existences”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­bhava­saṅkrānti­nāma­mahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa srid pa ’pho ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྲིད་པ་འཕོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="otherTitle" xml:lang="zh">《流轉諸有經》（大正藏：《佛說大乘流轉諸有經》）</title>
                                 <author role="translatorMain" ref="contributors.xml#team-39">Translated by the Kīrtimukha Translation Group<lb/>under
                                         the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                                 <author role="translatorEng" ref="contributors.xml#person-95">Celso Wilkinson</author>
@@ -27,7 +27,7 @@
                                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,8 +64,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-01-04T21:48:30.679Z" user="admin">04/01/2022 21:48:30</note>
-
+                                <note type="lastUpdated" date-time="2022-07-26T06:57:39.12Z" user="admin">26/07/2022 06:57:39</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:17:51.39Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-24T14:29:29.208Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-24T14:29:29.208Z" user="line-tofte">Auto
@@ -101,25 +100,19 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-10-01T12:48:00.01Z" user="line-tofte">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.14" date-time="2021-10-01T12:48:00.01Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2" date-time="2021-10-27T13:25:42.902Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-27T13:25:42.902Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-27T13:26:07.206Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                        
-    <note type="updated" update="translation-status" value="1" date-time="2021-11-02T16:57:54.926Z" user="mike">1</note>
-
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T16:57:54.926Z" user="mike">First published version</note>
-
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-03T18:59:09.024Z" user="celso">activated pending link and updated bibl</note>
-
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-14T17:08:12.86Z" user="konchog">Just added one comma, but it was an important one!</note>
-
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-11-18T19:08:08.276Z" user="john">Added refs to Skilling's 2021 translation.</note>
-
-    <note type="updated" update="text-version" value="1.0.4" date-time="2022-01-04T21:48:25.672Z" user="celso">karma to karman in Skt. field glossary</note>
-</notesStmt>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-11-02T16:57:54.926Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T16:57:54.926Z" user="mike">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-03T18:59:09.024Z" user="celso">activated pending link and updated bibl</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-14T17:08:12.86Z" user="konchog">Just added one comma, but it was an important one!</note>
+                                <note type="updated" update="text-version" value="1.0.3" date-time="2021-11-18T19:08:08.276Z" user="john">Added refs to Skilling's 2021 translation.</note>
+                                <note type="updated" update="text-version" value="1.0.4" date-time="2022-01-04T21:48:25.672Z" user="celso">karma to karman in Skt. field glossary</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T06:57:31.413Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
