--- a/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -8,7 +8,7 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">tathāgatasaṃgītisūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa bgro ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatasaṃgītināmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh"> 如來議論經</title>
+                <title type="otherTitle" xml:lang="zh">《如來議論經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa bgro ba zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-9"/>
                 <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
@@ -18,7 +18,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">马珂，王晓娟</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T07:42:47.93Z" user="admin">15/07/2022 07:42:47</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:58:41.822Z" user="admin">26/07/2022 06:58:41</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>
@@ -49,6 +49,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T07:41:31.029Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T07:42:41.997Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-15T07:42:41.997Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T06:58:39.8Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
